Usk.toSsk() tested